# micro-regime-propogation

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
data_ingestion/: CMakeLists.txt  MODULE_LAYOUT.md  README.md
data_ingestion/include/: common_constants.hpp  dbn_reader.hpp  event_parser.hpp  feature_engine.hpp  feature_snapshot.hpp  market_event.hpp  order_book.hpp
data_ingestion/src/core/: feature_engine.cpp  order_book.cpp  order_engine.cpp
data_ingestion/src/data/: dbn_reader.cpp
data_ingestion/tests/: CMakeLists.txt  bench_dbn_reader.cpp  test_dbn_reader.cpp  test_pipeline.cpp
docs/: architecture.md  class_structure.md  system_design.md  uml.txt
feature_generation/: CMakeLists.txt
feature_generation/include/: data_reciever.hpp  dual_feature_pipeline.hpp  feature_normalizer.hpp  feature_processor.hpp  feature_set.hpp  timestamp_pipeline.hpp
feature_generation/src/core/: dual_feature_pipeline.cpp  feature_normalizer.cpp  feature_processor.cpp  timestamp_pipeline.cpp
feature_generation/src/data/: features_to_csv.cpp
feature_generation/tests/: CMakeLists.txt  test_feature_pipeline.cpp  test_feature_processor.cpp  test_timestamp_pipeline.cpp
module1/: CMakeLists.txt
module1/include/: common_constants.hpp  event_parser.hpp  feature_engine.hpp  feature_snapshot.hpp  order_book.hpp  order_engine.hpp
module1/src/core/: event_parser.cpp  feature_engine.cpp  order_book.cpp  order_book_metrics.cpp  order_engine.cpp
module1/tests/: CMakeLists.txt  bench_dbn_reader.cpp  test_pipeline.cpp
module2/: CMakeLists.txt
module2/include/: feature_normalizer.hpp  feature_processor.hpp  feature_set.hpp  timestamp_pipeline.hpp
module2/src/core/: feature_normalizer.cpp  feature_processor.cpp  timestamp_pipeline.cpp
module2/src/data/: features_to_csv.cpp
module2/tests/: CMakeLists.txt  test_feature_processor.cpp
monte_carlo/: CMakeLists.txt  README.md  bench.cu
regime_classifier/python/: classifier.py  constants.py  data_checks.py  directory_layout.md  visualize.py
regime_classifier/python/causal_correlation/: autocorrelation.py  causality.py  significance.py
regime_classifier/python/run_outputs/: graphing.py
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/base_SPY/3/False_False/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/base_SPY/3/False_True/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/base_SPY/3/True_False/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/base_SPY/4/False_False/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/base_SPY/4/False_True/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/base_SPY/4/True_False/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/base_SPY/5/False_False/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/base_SPY/5/False_True/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/base_SPY/5/True_False/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/base_SPY/6/False_False/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/base_SPY/6/False_True/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/base_SPY/6/True_False/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/future_ES/3/False_False/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/future_ES/3/False_True/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/future_ES/3/True_False/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/future_ES/4/False_False/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/future_ES/4/False_True/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/future_ES/4/True_False/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/future_ES/5/False_False/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/future_ES/5/False_True/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/future_ES/5/True_False/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/future_ES/6/False_False/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/future_ES/6/False_True/: information.txt
regime_classifier/python/run_outputs/output_0.10S_36000_600_500/future_ES/6/True_False/: information.txt
regime_classifier/python/run_outputs/output_0.50S_7200_1200_2000/base_SPY/3/False_False/: information.txt
regime_classifier/python/run_outputs/output_0.50S_7200_1200_2000/base_SPY/3/False_True/: information.txt
regime_classifier/python/run_outputs/output_0.50S_7200_1200_2000/base_SPY/3/True_False/: information.txt
regime_classifier/python/run_outputs/output_0.50S_7200_1200_2000/base_SPY/4/False_False/: information.txt
regime_classifier/python/run_outputs/output_0.50S_7200_1200_2000/base_SPY/4/False_True/: information.txt
regime_classifier/python/run_outputs/output_0.50S_7200_1200_2000/base_SPY/4/True_False/: information.txt
regime_classifier/python/run_outputs/output_0.50S_7200_1200_2000/base_SPY/5/False_False/: information.txt
regime_classifier/python/run_outputs/output_0.50S_7200_1200_2000/base_SPY/5/False_True/: information.txt
regime_classifier/python/run_outputs/output_0.50S_7200_1200_2000/base_SPY/5/True_False/: information.txt
regime_classifier/python/visualization_scripts/: visualize_heatmaps.py  visualize_tsne.py  visualize_umap.py
regime_classifier/python_data_analysis/: ghmm_tester.py  graphing.py  highlighted_graph.py  regime_data_analysis.py
scripts/: feature_to_csv.sh  multidate_feature_to_csv.sh  python_multi_config.sh  python_regime_full_script.sh  rebuild.sh
(+37 files in other folders)
